--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "sails-postgresql": "0.10.16",
     "jsonwebtoken": "5.4.0",
     "request": "2.53.0",
-    "bcrypt": "0.8.5"
+    "bcrypt": "0.8.5",
+    "passport": "0.3.2",
+    "passport-twitter": "1.0.4",
+    "sails-generate-auth": "0.3.1"
   },
   "scripts": {
     "debug": "node debug app.js",
